--- a/vue-zhihu/index.html
+++ b/vue-zhihu/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-zhihu</title>
+    <link rel="stylesheet" href="static/css/iconfont.css">
   </head>
   <body>
     <div id="app"></div>
