Add transition-effect v2

--- a/vue-grammer-demos/index.html
+++ b/vue-grammer-demos/index.html
@@ -5,6 +5,7 @@
     <title>vue-grammer-demos</title>
     <link href="https://unpkg.com/animate.css@3.5.1/animate.min.css" rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
