--- a/vue-grammer-demos/index.html
+++ b/vue-grammer-demos/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
     <script src="https://unpkg.com/tween.js@16.3.4"></script>
     <script src="https://unpkg.com/color-js@1.0.3/color.js"></script>
+    <script src="./static/jscolor.js"></script>
   </head>
   <body>
     <div id="app"></div>
